# Crypto-Consumer-Protection-Policy-Simulation

./: .dockerignore  .env.example  .env.prod.example  .gitignore  MODEL.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  gsa_morris.py  gsa_sobol.py  pyproject.toml  sweep.py  val_extra.py
.github/workflows/: tests.yml
configs/: baseline.yaml  scale_100k.yaml
deploy/: Caddyfile  backup.sh  nginx-dev.conf
dfl24sim/: __init__.py  behavior.py  calibrate.py  cli.py  config.py  engine.py  gsa.py  market.py  network.py  policy.py  population.py  runner.py  scenarios.py  study.py  sweeps.py
docs/: CONNECT-CHATGPT.md  CONNECT-CLAUDE.md  DEPLOY.md  DEV-ENV.md
docs/superpowers/plans/: 2026-07-23-authkit-web-login-prod.md  2026-07-23-authkit-web-login.md  2026-07-23-dev-env-compose-nginx.md
docs/superpowers/specs/: 2026-07-23-authkit-web-login-design.md  2026-07-23-dev-env-compose-nginx-design.md
results/: baseline_manifest.json  baseline_panel.parquet  baseline_price.parquet  baseline_summary.parquet  benchmark.csv  benchmark.json  calibration.json  coverage.csv  coverage_adaptive.csv  fade.csv  summary.json  systemic.json
results/gsa/: morris.json  sobol.json  validation.json
results/scenarios/: battery.csv  scenario_meta.json  scenarios_summary.csv
results/sensitivity/: sweeps.json
server/: Dockerfile  pyproject.toml
server/dfl24sim_server/: __init__.py  app.py  auth.py  db.py  jobs.py  mcp.py  migrate.py  reference.py  reference_data.json  storage.py  worker.py
server/scripts/: build_reference_data.py
server/tests/: conftest.py  test_artifacts.py  test_auth_tenancy.py  test_get_artifact.py  test_health.py  test_job_governance.py  test_job_status_tools.py  test_job_store.py  test_mcp_tools.py  test_reference_results.py  test_run_calibration.py  test_run_gsa.py  test_run_scenario.py  test_run_simulation.py  test_run_study.py  test_run_sweep.py  test_storage.py  test_streamable_http.py  test_worker.py
tests/: README.md  conftest.py  test_behavior.py  test_gsa.py  test_market.py  test_network.py  test_policy.py  test_scenarios.py  test_sweeps.py
web/: .env.local.example  .gitignore  Dockerfile  README.md  middleware.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
