[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfl24sim"
version = "3.0.0"
description = "A scalable, vectorised agent-based platform for point-of-action friction, compliance coverage, and systemic risk in a retail crypto market."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Danang Fintech Lab (DFL24)" }]
license = { text = "Proprietary — DFL24 research prototype" }
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "statsmodels>=0.14",
  "SALib>=1.5",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "networkx>=3.0",
  "pyarrow>=14.0",
  "numba>=0.59",
  "pyyaml>=6.0",
]

[project.scripts]
dfl24sim = "dfl24sim.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["dfl24sim"]

[tool.pytest.ini_options]
# Scope the root run to the research suite; the server package under server/
# carries its own pytest configuration and dependencies.
testpaths = ["tests"]
filterwarnings = [
  # test-size Sobol samples can leave an output with zero variance; the
  # resulting NaN indices are expected and sanitized by consumers.
  "ignore:invalid value encountered in divide:RuntimeWarning:SALib.analyze.sobol",
  # np.where(deg > 0, 1.0/deg, 0) evaluates 1/0 for isolated nodes, which
  # tiny test populations produce; harmless by design.
  "ignore:divide by zero encountered in divide:RuntimeWarning:dfl24sim.network",
]
