[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfl24sim-server"
version = "0.1.0"
description = "MCP + REST server exposing the DFL24-Sim policy simulator to chat clients."
requires-python = ">=3.11"
dependencies = [
  "dfl24sim",
  "fastmcp>=3,<4",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["dfl24sim_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  # starlette.testclient prefers the httpx2 package; we stay on httpx until
  # the rest of the stack (fastmcp) migrates.
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
